syntax = "proto3";

option csharp_namespace = "WC.Service.PersonalData.API.gRPC.Services";

package personal_data;

import "google/protobuf/empty.proto";

service GreeterPersonalData {
  rpc Create (PersonalDataCreateRequest) returns (PersonalDataCreateResponse);
  rpc ResetPassword (PersonalDataResetPasswordRequest) returns (google.protobuf.Empty);
  rpc Delete (PersonalDataDeleteRequest) returns (google.protobuf.Empty);
  rpc VerifyCredentials (VerifyCredentialsRequest) returns (VerifyCredentialsResponse);
  rpc GetEmailEmployee (GetEmailEmployeeRequest) returns (GetEmailEmployeeResponse);
}

message PersonalDataCreateRequest {
  string employeeId = 1;
  string email = 2;
  string password = 3;
}

message PersonalDataCreateResponse {
  string personalDataId = 1;
}

message PersonalDataResetPasswordRequest {
  string personalDataId = 1;
  string password = 2;
}

message PersonalDataDeleteRequest {
  string personalDataId = 1;
}

message VerifyCredentialsRequest {
  string email = 1;
  string password = 2;
}

message VerifyCredentialsResponse {
  string employeeId = 1;
  string role = 5;
}

message GetEmailEmployeeRequest {
  string employeeId = 1;
}

message GetEmailEmployeeResponse {
  string email = 1;
}

